--- a/src/components/styles.css
+++ b/src/components/styles.css
@@ -35,10 +35,10 @@ body {
 
 
 
-@media only screen and (max-width: 1440px) {
+@media only screen and (max-width: 1460px) {
   .swiper {
     width: 70%;
-    height: 40vw;
+    height: 58vw !important;
     color: #013761 !important;
 
   }
